# src

./: .gitignore  CMakeLists.txt  build.sh
distrib/: CMakeLists.txt
etc/: CMakeLists.txt
games/: CMakeLists.txt
games/quiz/: CMakeLists.txt
games/worms/: CMakeLists.txt
games/wump/: CMakeLists.txt
sbin/: Makefile
sbin/devd/: Makefile
sys/: CMakeLists.txt
sys/arch/arm64/arm64/: CMakeLists.txt  machdep.c  ptrauth.c  vm_machdep.c
sys/arch/arm64/include/: armreg.h  cpu.h  vmparam.h
sys/conf/: CMakeLists.txt
sys/ufs/: CMakeLists.txt
