cmake_minimum_required(VERSION 3.0)  # CMake version check
project(games)                     # Create project
set(C_STANDARD 1)                    # Set C11 standard

# Be sure to include the needed subriectories
add_subdirectory(adventure)
add_subdirectory(arithmetic)
add_subdirectory(atc)
add_subdirectory(backgammon)
add_subdirectory(banner)
add_subdirectory(battlestar)
add_subdirectory(bcd)
add_subdirectory(boggie)
add_subdirectory(bs)
add_subdirectory(caesar)
add_subdirectory(canfield)
add_subdirectory(cribbage)
add_subdirectory(factor)
add_subdirectory(fish)
add_subdirectory(fortune)
add_subdirectory(gomuko)
add_subdirectory(grdc)
add_subdirectory(hack)
add_subdirectory(hangman)
add_subdirectory(hunt)
add_subdirectory(mille)
add_subdirectory(monop)
add_subdirectory(morse)
add_subdirectory(number)
add_subdirectory(phantasia)
add_subdirectory(pig)
add_subdirectory(pom)
add_subdirectory(ppt)
add_subdirectory(primes)
add_subdirectory(quiz)
add_subdirectory(rain)
add_subdirectory(random)
add_subdirectory(robots)
add_subdirectory(sail)
add_subdirectory(snake)
add_subdirectory(tetris)
add_subdirectory(trek)
add_subdirectory(wargames)
add_subdirectory(worm)
add_subdirectory(worms)
add_subdirectory(wump)
